--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "Ionic LSCA Front Dojo",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {}
   },
   "type": "angular"
 }
