--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cordova-android": "^8.1.0",
     "cordova-base64-to-gallery": "^4.1.3",
     "cordova-plugin-android-permissions": "^1.0.2",
+    "jwt-decode": "^2.2.0",
     "ngx-qrcode2": "^9.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
