--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@auth0/angular-jwt": "^4.1.2",
     "@capacitor/core": "2.1.2",
     "@ionic-native/android-permissions": "^5.26.0",
     "@ionic-native/barcode-scanner": "^5.26.0",
